src/index.css
/*
=============== 
Variables
===============
*/

:root {
  /* primary/main color */
  --clr-primary-5: #d9a6f9;
  /* lighter shades of primary color */

  /* grey used for paragraphs */
  --clr-grey-1: hsl(0, 8%, 72%);
  --clr-grey-5: hsl(210, 22%, 49%);
  --clr-grey-10: hsl(210, 36%, 96%);
  --clr-white: #fff;

  --clr-black: #222;
  --transition: all 0.3s linear;
  --spacing: 0.1rem;
  --radius: 0.25rem;
  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
  --max-width: 1170px;
  --fixed-width: 620px;
}
/*
=============== 
Global Styles
===============
*/

*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  background: var(--clr-grey-10);
  color: var(--clr-grey-1);
  line-height: 1.5;
  font-size: 0.875rem;
}
ul {
  list-style-type: none;
}
a {
  text-decoration: none;
}
h1,
h2,
h3,
h4 {
  letter-spacing: var(--spacing);
  text-transform: capitalize;
  line-height: 1.25;
  margin-bottom: 0.75rem;
}
h1 {
  font-size: 3rem;
}
h2 {
  font-size: 2rem;
}
h3 {
  font-size: 1.25rem;
}
h4 {
  font-size: 0.875rem;
}
p {
  margin-bottom: 1.25rem;
  /* color: var(--clr-grey-5); */
}
@media screen and (min-width: 800px) {
  h1 {
    font-size: 4rem;
  }
  h2 {
    font-size: 2.5rem;
  }
  h3 {
    font-size: 1.75rem;
  }
  h4 {
    font-size: 1rem;
  }
  body {
    font-size: 1rem;
  }
  h1,
  h2,
  h3,
  h4 {
    line-height: 1;
  }
}
/*  global classes */

/* section */
.section {
  width: 90vw;
  margin: 0 auto;
  max-width: var(--max-width);
}

@media screen and (min-width: 992px) {
  .section {
    width: 95vw;
  }
}

.error-text {
  color: whitesmoke;
  text-align: center;
  margin-top: 3rem;
  margin-inline: auto;
  width: 90vw;
  padding: 0.8rem 2rem;
  background-color: rgb(236, 155, 168);
  border: 2px solid #e14a4a;
}

/*
=============== 
Color Generator
===============
*/

.container {
  text-align: center;
  display: flex;
  align-items: center;
  height: 100px;
  padding-left: 2rem;
}
.container h3 {
  margin-bottom: 0;
  margin-right: 2rem;
}

input {
  border-color: transparent;
  padding: 0.5rem 1rem;
  font-size: 1.2rem;
  border-top-left-radius: var(--radius);
  border-bottom-left-radius: var(--radius);
}
.btn {
  background: var(--clr-primary-5);
  padding: 0.5rem 1rem;
  font-size: 1.2rem;
  border-color: transparent;
  border-top-right-radius: var(--radius);
  border-bottom-right-radius: var(--radius);
  text-transform: capitalize;
  color: var(--clr-white);
  cursor: pointer;
}
@media screen and (max-width: 576px) {
  .container h3 {
    font-size: 1rem;
  }
  input,
  .btn {
    font-size: 0.85rem;
  }
}
input.error {
  border: 2px solid rgb(221, 66, 66);
}
.colors {
  min-height: calc(100vh - 100px);
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(223.33px, 1fr));
  grid-template-rows: repeat(auto-fit, minmax(96px, 1fr));
}
.color {
  padding: 1rem 2rem;
  cursor: pointer;
  font-size: 1rem;
  text-transform: none;
}
.percent-value {
  margin-bottom: 0;
  color: var(--clr-grey-1);
}
.color-value {
  color: var(--clr-grey-1);
  margin-bottom: 0;
}
.color-light .color-value {
  color: var(--clr-white);
}
.color-light .percent-value {
  color: var(--clr-white);
}

.color-white {
  color: rgb(244, 241, 241);
}

.color-black {
  color: rgb(19, 14, 14);
}

.alert {
  text-transform: uppercase;
  font-size: 0.85rem;
  margin-top: 0.5rem;
}

